--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,5 +10,6 @@
     <string name="action_settings">Settings</string>
     <string name="fragment1">Fragment 1</string>
     <string name="fragment2">Fragment 2</string>
+    <string name="title_activity_login">Login</string>
 
 </resources>
